--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -5,51 +5,62 @@
 {% block title %} <title> Add task </title> {% endblock %}
 
 
-{% block content %} 
+{% block content %}
 
-<form class="row g-3">
-    <div class="col-12">
-      <label for="inputAddress" class="form-label">Address</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+<form class="g-3">
+    <div class="row">
+        <div class="col-12">
+            <label for="inputAddress" class="form-label">Task</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        </div>
     </div>
-    <div class="col-12">
-        <label for="inputAddress" class="form-label">TasK</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    <div class="row mt-3">
+        <div class="col-lg-4">
+            <label for="client" class="form-label">Client Name</label>
+            <select name="" id="client" class="form-select">
+                <option value="01">01</option>
+                <option value="02">02</option>
+
+            </select>
+        </div>
+        <div class="col-lg-4">
+            <label for="date" class="form-label">Date</label>
+            <input type="date" name="" class="form-control">
+        </div>
+        <div class="col-lg-4">
+            <label for="status" class="form-label">Status</label>
+            <select name="" id="status" class="form-select">
+                <option value="01">Pending</option>
+                <option value="02">Completed</option>
+
+            </select>
+        </div>
     </div>
-    <div class="col-12">
-        <label for="inputAddress" class="form-label">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    <div class="row mt-3">
+        <div class="col-lg-4">
+            <label for="type" class="form-label">Type</label>
+            <select name="" id="type" class="form-select">
+                <option value="01">01</option>
+                <option value="02">02</option>
+
+            </select>
+        </div>
+        <div class="col-lg-4">
+            <label for="time" class="form-label">Time</label>
+            <input type="number"  class="form-control" id="date">
+        </div>
+        
     </div>
-    <div class="col-12">
-      <label for="inputAddress2" class="form-label">Address 2</label>
-      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+    <div class="row mt-3">
+        <div class="col-lg-10"></div>
+        <div class="col-lg-2">
+            <button type="submit" class="btn btn-md btn-primary w-100">Add</button>
+           
+        </div>
     </div>
-    <div class="col-md-6">
-      <label for="inputCity" class="form-label">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="col-md-4">
-      <label for="inputState" class="form-label">State</label>
-      <select id="inputState" class="form-select">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="col-md-2">
-      <label for="inputZip" class="form-label">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-    <div class="col-12">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck">
-        <label class="form-check-label" for="gridCheck">
-          Check me out
-        </label>
-      </div>
-    </div>
-    <div class="col-12">
-      <button type="submit" class="btn btn-primary">Sign in</button>
-    </div>
-  </form>
+
+
+
+</form>
 
 {% endblock%}
