new modules addes

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,5 +42,6 @@
         
     </div>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
