--- a/templates/completed_task.html
+++ b/templates/completed_task.html
@@ -26,7 +26,7 @@
           <tr>
             <td>{{ task.date }}</td>
             <td>{{ task.name }}</td>
-            <td>{{ task.client}}</td>
+            <td>{{ task.client.name}}</td>
             <td>{{ task.status}}</td>
             <td>{{ task.type}}</td>
             <td>{{ task.time}}</td>
