--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -2,32 +2,27 @@
 
 {% load static %}
 
-{% block title %} <title> Add task </title> {% endblock %}
+{% block title %} <title> Edit task </title> {% endblock %}
 
 
 {% block content %}
 
-<form class="g-3" method="post">
+<form class="g-3" method="get">
     {% csrf_token %}
     <div class="row">
         <div class="col-12">
             <label for="task" class="form-label">Task</label>
-            <input type="text" class="form-control" id="task" placeholder="Task name" name="task">
+            <input type="text" value="{{task.name}}" class="form-control" id="task" placeholder="Task name" name="task_name">
         </div>
     </div>
     <div class="row mt-3">
         <div class="col-lg-4">
             <label for="client" class="form-label">Client Name</label>
-            <select name="client" id="client" class="form-select">
-                {% for client in clients %}
-                <option value="{{client.id}}">{{ client.name }}</option>
-                {% endfor %}
-
-            </select>
+            <input type="text" value="{{task.client.name}}" class="form-control" id="client" placeholder=" name" name="client">
         </div>
         <div class="col-lg-4">
             <label for="date" class="form-label">Date</label>
-            <input type="date" name="date" class="form-control">
+            <input type="text" value="{{task.date}}" name="date" class="form-control">
         </div>
         <div class="col-lg-4">
             <label for="status" class="form-label">Status</label>
@@ -49,7 +44,7 @@
         </div>
         <div class="col-lg-4">
             <label for="time" class="form-label">Time</label>
-            <input type="number"  class="form-control" id="time" name="time">
+            <input type="number" value="{{task.time}}" class="form-control" id="time" name="time">
         </div>
         
     </div>
