--- a/templates/base.html
+++ b/templates/base.html
@@ -1,100 +1,61 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %} {% endblock %}
-    {% block css %} {% endblock %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% block title %} {% endblock %}
+  {% block css %} {% endblock %}
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="{% static 'img/img.png' %}" width="115" height="30" alt="">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'add_task' %}">Add Task</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'completed_task' %}">Completed Task</a>
-              </li>
-            
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'pending_task' %}" >Pending Task</a>
-              </li>
-            </ul>
-           
-          </div>
-        </div>
-      </nav>
-    <div class="container" style="margin-top: 24px;">
-        {% block content %} {% endblock %}
-        
-    </div>
-    <div>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="{% static 'img/img.png' %}" width="115" height="30" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'add_task' %}">Add Task</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'completed_task' %}">Completed Task</a>
+          </li>
 
-      <footer class="bg-dark text-center text-white">
-      <!-- Grid container -->
-      <div class="container p-4 pb-0">
-        <!-- Section: Social media -->
-        <section class="mb-4">
-          <!-- Facebook -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-    
-          <!-- Twitter -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-twitter"></i
-          ></a>
-    
-          <!-- Google -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-google"></i
-          ></a>
-    
-          <!-- Instagram -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-instagram"></i
-          ></a>
-    
-          <!-- Linkedin -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-linkedin-in"></i
-          ></a>
-    
-          <!-- Github -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-            ><i class="fab fa-github"></i
-          ></a>
-        </section>
-        <!-- Section: Social media -->
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'pending_task' %}">Pending Task</a>
+          </li>
+        </ul>
+
       </div>
-      <!-- Grid container -->
-    
-      <!-- Copyright -->
+    </div>
+  </nav>
+  <div class="container" style="margin-top: 24px; min-height: 100vh;">
+    {% block content %} {% endblock %}
+  </div>
+
+
+    <footer class="bg-dark text-center text-white" style="bottom: 0; left: 0; position: fixed; width: 100%; margin-top: 20px;">
+
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        <a class="img" href="#">
+          <img src="{% static 'img/img.png' %}" width="200" height="50" alt="">
+        </a>
       </div>
       <!-- Copyright -->
     </footer>
-      
-    </div>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
 
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+</body>
 </html>
