--- a/templates/pending.html
+++ b/templates/pending.html
@@ -7,10 +7,10 @@
 
 {% block content %} 
 
-<div class="row">
+<div class="row" style="padding-bottom: 100px;">
     <div class="col-12">
     <h2>Pending Task</h2>    
-    <table class="table table-hover">
+    <table class=" table table-hover table-dark">
         <thead>
           <tr>
             <th>Date</th>
