--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -7,17 +7,19 @@
 
 {% block content %}
 
-<form class="g-3" method="post">
+
+<form class="g-3" method="post" style="background-color: black;">
     {% csrf_token %}
+    <div>
     <div class="row">
         <div class="col-12">
-            <label for="task" class="form-label">Task</label>
+            <label for="task" class="form-label" style="color: orangered;">Task</label>
             <input type="text" class="form-control" id="task" placeholder="Task name" name="task">
         </div>
     </div>
     <div class="row mt-3">
-        <div class="col-lg-4">
-            <label for="client" class="form-label">Client Name</label>
+        <div class="col-lg-8">
+            <label for="client" class="form-label" style="color: orangered;">Client Name</label>
             <select name="client" id="client" class="form-select">
                 {% for client in clients %}
                 <option value="{{client.id}}">{{ client.name }}</option>
@@ -26,11 +28,7 @@
             </select>
         </div>
         <div class="col-lg-4">
-            <label for="date" class="form-label">Date</label>
-            <input type="date" name="date" class="form-control">
-        </div>
-        <div class="col-lg-4">
-            <label for="status" class="form-label">Status</label>
+            <label for="status" class="form-label" style="color: orangered;">Status</label>
             <select name="status" id="status" class="form-select">
                 <option value="0">Pending</option>
                 <option value="1">Completed</option>
@@ -40,7 +38,7 @@
     </div>
     <div class="row mt-3">
         <div class="col-lg-4">
-            <label for="type" class="form-label">Type</label>
+            <label for="type" class="form-label" style="color: orangered;">Type</label>
             <select name="type" id="type" class="form-select">
                 <option value="01">01</option>
                 <option value="02">02</option>
@@ -48,20 +46,24 @@
             </select>
         </div>
         <div class="col-lg-4">
-            <label for="time" class="form-label">Time</label>
+            <label for="time" class="form-label" style="color: orangered;">Time</label>
             <input type="number"  class="form-control" id="time" name="time">
+        </div>
+        <div class="col-lg-4">
+            <label for="date" class="form-label" style="color: orangered;">Date</label>
+            <input type="date" name="date" class="form-control">
         </div>
         
     </div>
     <div class="row mt-3">
-        <div class="col-lg-10"></div>
-        <div class="col-lg-2">
-            <button type="submit" class="btn btn-md btn-primary w-100">Add</button>
+       
+        <div class="col-12">
+            <button type="submit" class="btn btn-md btn-light w-100" style="background-color: orangered; border: none;">Add</button>
            
         </div>
     </div>
 
-
+    </div>
 
 </form>
 
