--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="position: sticky; left: 0; top: 0; width: 100%;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="{% static 'img/img.png' %}" width="115" height="30" alt="">
@@ -40,16 +40,16 @@
       </div>
     </div>
   </nav>
-  <div class="container" style="margin-top: 24px; min-height: 100vh;">
+  <div class="container" style="margin-top: 24px;">
     {% block content %} {% endblock %}
   </div>
 
 
     <footer class="bg-dark text-center text-white" style="bottom: 0; left: 0; position: fixed; width: 100%; margin-top: 20px;">
 
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      <div class="text-center" style="background-color: rgba(0, 0, 0, 0.2);">
         <a class="img" href="#">
-          <img src="{% static 'img/img.png' %}" width="200" height="50" alt="">
+          <img src="{% static 'img/img.png' %}" width="100px" height="20px" alt="">
         </a>
       </div>
       <!-- Copyright -->
