--- a/templates/completed_task.html
+++ b/templates/completed_task.html
@@ -7,8 +7,8 @@
 
 {% block content %} 
 
-<div class="row">
-    <div class="col-12">
+<div class="row" style="padding-bottom: 100px;">
+    <div class="text-center">
     <h2>Completed Task</h2>    
     <table class="table table-hover">
         <thead>
