--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3839,6 +3839,7 @@ textarea.form-control-lg {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  font-family: ror;
 }
 
 .nav-link {
