--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -4,67 +4,77 @@
 
 {% block title %} <title> Add task </title> {% endblock %}
 
+{% block titlecontent %} 
+
+<div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
+  <h2 style="font-family: monospace; padding-top: 10px;">Add Tasks</h2>
+</div> 
+{% endblock %}
 
 {% block content %}
 
+<div class="row justify-content-center mt-3">
+    <form class="cs-form shadow-lg" method="post" style="background-color: white;  padding-bottom: 20px;">
+        {% csrf_token %}
+        <div>
+            <div class="row mt-3">
+                <div class="col-lg-4">
+                    <label for="client" class="form-label" style="color: orangered;">Client Name</label>
+                    <select name="client" id="client" class="form-select">
+                        {% for client in clients %}
+                        <option value="{{client.id}}">{{ client.name }}</option>
+                        {% endfor %}
 
-<form class="g-3" method="post" style="background-color: black;">
-    {% csrf_token %}
-    <div>
-    <div class="row">
-        <div class="col-12">
-            <label for="task" class="form-label" style="color: orangered;">Task</label>
-            <input type="text" class="form-control" id="task" placeholder="Task name" name="task">
-        </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col-lg-8">
-            <label for="client" class="form-label" style="color: orangered;">Client Name</label>
-            <select name="client" id="client" class="form-select">
-                {% for client in clients %}
-                <option value="{{client.id}}">{{ client.name }}</option>
-                {% endfor %}
+                    </select>
+                </div>
+                <div class="col-lg-4">
+                    <label for="status" class="form-label" style="color: orangered;">Status</label>
+                    <select name="status" id="status" class="form-select">
+                        <option value="0">Pending</option>
+                        <option value="1">Completed</option>
 
-            </select>
-        </div>
-        <div class="col-lg-4">
-            <label for="status" class="form-label" style="color: orangered;">Status</label>
-            <select name="status" id="status" class="form-select">
-                <option value="0">Pending</option>
-                <option value="1">Completed</option>
+                    </select>
+                </div>
+                <div class="col-lg-4">
+                    <label for="date" class="form-label" style="color: orangered;">Date</label>
+                    <input type="date" name="date" class="form-control">
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-12">
+                    <label for="task" class="form-label" style="color: orangered;">Task</label>
+                    <input type="text-l" class="form-control" id="task" placeholder="Task name" name="task">
+                </div>
+            </div>
 
-            </select>
-        </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col-lg-4">
-            <label for="type" class="form-label" style="color: orangered;">Type</label>
-            <select name="type" id="type" class="form-select">
-                <option value="01">01</option>
-                <option value="02">02</option>
+            <div class="row mt-3">
+                <div class="col-lg-8">
+                    <label for="type" class="form-label" style="color: orangered;">Type</label>
+                    <select name="type" id="type" class="form-select">
+                        <option value="01">deploy</option>
+                        <option value="02">troubleshoot</option>
 
-            </select>
-        </div>
-        <div class="col-lg-4">
-            <label for="time" class="form-label" style="color: orangered;">Time</label>
-            <input type="number"  class="form-control" id="time" name="time">
-        </div>
-        <div class="col-lg-4">
-            <label for="date" class="form-label" style="color: orangered;">Date</label>
-            <input type="date" name="date" class="form-control">
-        </div>
-        
-    </div>
-    <div class="row mt-3">
-       
-        <div class="col-12">
-            <button type="submit" class="btn btn-md btn-light w-100" style="background-color: orangered; border: none;">Add</button>
-           
-        </div>
-    </div>
+                    </select>
+                </div>
+                <div class="col-lg-4">
+                    <label for="time" class="form-label" style="color: orangered;">Time</label>
+                    <input type="number" class="form-control" id="time" name="time">
+                </div>
 
-    </div>
 
-</form>
+            </div>
+            <div class="row mt-3">
+                <div class="col-8"></div>
+                <div class="col-4">
+                    <button type="submit" class="btn btn-lg btn-dark w-100 shadow-sm"
+                        style="border: none; color: #ff6404;">Add</button>
+
+                </div>
+            </div>
+
+        </div>
+
+    </form>
+</div>
 
 {% endblock%}
