--- a/templates/pending.html
+++ b/templates/pending.html
@@ -4,13 +4,18 @@
 
 {% block title %} <title> Pending-task </title> {% endblock %}
 
+{% block titlecontent %} 
+
+<div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
+  <h2 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; padding-top: 10px;">All Tasks</h2>
+</div> 
+{% endblock %}
 
 {% block content %} 
 
-<div class="row" style="padding-bottom: 100px;">
-    <div class="col-12">
-    <h2>Pending Task</h2>    
-    <table class=" table table-hover table-dark">
+<div class="row shadow-lg" style="padding-bottom: 30px; margin-bottom: 40px; padding-top: 20px; margin-top: 20px;">
+    <div class="col-12">   
+    <table class=" table table-hover ">
         <thead>
           <tr>
             <th>Date</th>
