--- a/templates/completed_task.html
+++ b/templates/completed_task.html
@@ -4,12 +4,17 @@
 
 {% block title %} <title> Completed-task </title> {% endblock %}
 
+{% block titlecontent %} 
+
+<div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
+  <h2 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; padding-top: 10px;">Completed Tasks</h2>
+</div> 
+{% endblock %}
 
 {% block content %} 
 
-<div class="row" style="padding-bottom: 100px;">
-    <div class="text-center">
-    <h2>Completed Task</h2>    
+<div class="row shadow-lg" style="padding-bottom: 100px; margin-top: 7px;">
+    <div class="col-12">   
     <table class="table table-hover">
         <thead>
           <tr>
