--- a/templates/pending.html
+++ b/templates/pending.html
@@ -7,7 +7,7 @@
 {% block titlecontent %} 
 
 <div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
-  <h2 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; padding-top: 10px;">All Tasks</h2>
+  <h2 style="font-family: Racing Sans One;">All Tasks</h2>
 </div> 
 {% endblock %}
 
