--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -7,7 +7,7 @@
 {% block titlecontent %} 
 
 <div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
-  <h2 style="font-family: monospace; padding-top: 10px;">Add Tasks</h2>
+  <h2 style="font-family: Racing Sans One;">Add Tasks</h2>
 </div> 
 {% endblock %}
 
