--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 {% block titlecontent %} 
 
 <div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
-  <h5 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; padding-top: 10px;">All Tasks</h5>
+  <h3 style="font-family: Racing Sans One;">All Tasks</h3>
 </div> 
 {% endblock %}
 
