--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -67,7 +67,7 @@
                 <div class="col-8"></div>
                 <div class="col-4">
                     <button type="submit" class="btn btn-lg btn-dark w-100 shadow-sm"
-                        style="border: none; color: #ff6404;">Add</button>
+                        style="border: none; color: #ff6404; font-family: Racing Sans One;">Add</button>
 
                 </div>
             </div>
