--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 
 {% block titlecontent %} 
 
-<div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
+<div class="row bg-dark shadow-sm sticky-top" style="margin-top: 10px; padding: 7px; color: #ff6404;">
   <h3 style="font-family: Racing Sans One;">All Tasks</h3>
 </div> 
 {% endblock %}
