--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
   <nav class="navbar justify-content-center bg-dark">
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a>
+        <a href="{% url 'main' %}">
           <img src="{% static 'img/img.png' %}" width="195" height="40" alt="">
         </a>
       </li>
