--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <a href="{% url 'main' %}">
-          <img src="{% static 'img/img.png' %}" width="195" height="40" alt="">
+          <img src="{% static 'img/namelogo.png' %}" width="250" height="70" alt="">
         </a>
       </li>
     </ul>
@@ -38,7 +38,7 @@
       <div class="row">
           <div class="col-sm-auto bg-dark sticky-top">
               <div class="d-flex flex-sm-column flex-row flex-nowrap bg-dark align-items-center sticky-top">
-                  <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center" style="font-size: 30px;">
+                  <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center" style="font-size: 35px;">
                   <li class="nav-item">
                       <a href="{% url 'home' %}" class="nav-link " title="HOME" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
                           <i class="bi bi-house-door-fill" style="color: orangered;"></i>
