--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -6,7 +6,7 @@
 
 {% block titlecontent %} 
 
-<div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
+<div class="row shadow-sm card" style="margin-top: 0px; padding: 7px; background-color: #fff; color: #00838f;">
   <h2 style="font-family: Racing Sans One;">Add Tasks</h2>
 </div> 
 {% endblock %}
@@ -19,7 +19,7 @@
         <div>
             <div class="row mt-3">
                 <div class="col-lg-4">
-                    <label for="client" class="form-label" style="color: orangered;">Client Name</label>
+                    <label for="client" class="form-label" style="color: #00838f;">Client Name</label>
                     <select name="client" id="client" class="form-select">
                         {% for client in clients %}
                         <option value="{{client.id}}">{{ client.name }}</option>
@@ -28,7 +28,7 @@
                     </select>
                 </div>
                 <div class="col-lg-4">
-                    <label for="status" class="form-label" style="color: orangered;">Status</label>
+                    <label for="status" class="form-label" style="color: #00838f;">Status</label>
                     <select name="status" id="status" class="form-select">
                         <option value="0">Pending</option>
                         <option value="1">Completed</option>
@@ -36,20 +36,20 @@
                     </select>
                 </div>
                 <div class="col-lg-4">
-                    <label for="date" class="form-label" style="color: orangered;">Date</label>
+                    <label for="date" class="form-label" style="color: #00838f;">Date</label>
                     <input type="date" name="date" class="form-control">
                 </div>
             </div>
             <div class="row mt-3">
                 <div class="col-12">
-                    <label for="task" class="form-label" style="color: orangered;">Task</label>
+                    <label for="task" class="form-label" style="color: #00838f;">Task</label>
                     <input type="text-l" class="form-control" id="task" placeholder="Task name" name="task">
                 </div>
             </div>
 
             <div class="row mt-3">
                 <div class="col-lg-8">
-                    <label for="type" class="form-label" style="color: orangered;">Type</label>
+                    <label for="type" class="form-label" style="color: #00838f;">Type</label>
                     <select name="type" id="type" class="form-select">
                         <option value="01">deploy</option>
                         <option value="02">troubleshoot</option>
@@ -57,7 +57,7 @@
                     </select>
                 </div>
                 <div class="col-lg-4">
-                    <label for="time" class="form-label" style="color: orangered;">Time</label>
+                    <label for="time" class="form-label" style="color: #00838f;">Time</label>
                     <input type="number" class="form-control" id="time" name="time">
                 </div>
 
@@ -66,8 +66,9 @@
             <div class="row mt-3">
                 <div class="col-8"></div>
                 <div class="col-4">
-                    <button type="submit" class="btn btn-lg btn-dark w-100 shadow-sm"
-                        style="border: none; color: #ff6404; font-family: Racing Sans One;">Add</button>
+                    <button type="submit" class="btn btn-lg w-100 shadow-sm"
+                        style="background-color: #00838f; border: none; color: #fff; font-family: DM Sans;">
+                        <i class="bi bi bi-plus-square" style="color: #fff;"></i>  Add</button>
 
                 </div>
             </div>
