--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,19 @@
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'icofont/icofont.min.css' %}">
   <link
-    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Racing Sans One|Audiowide|Sofia|Trirong|Yanone Kaffeesatz'
+    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Racing Sans One|Audiowide|DM Sans|Trirong|Yanone Kaffeesatz'
     rel='stylesheet'>
   <style>
     body {
-      font-family: 'Yanone Kaffeesatz';
-      font-size: 20px;
+      font-family: 'DM Sans';
+      font-size: 17px;
+      background-color: #fff ;
     }
   </style>
 </head>
 
 <body>
+  <!--
   <nav class="navbar justify-content-center bg-dark">
     <ul class="nav justify-content-center">
       <li class="nav-item">
@@ -32,55 +34,70 @@
       </li>
     </ul>
   </nav>
+  -->
 
 
-    <div class="container-fluid">
-      <div class="row">
-          <div class="col-sm-auto bg-dark sticky-top">
-              <div class="d-flex flex-sm-column flex-row flex-nowrap bg-dark align-items-center sticky-top">
-                  <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center" style="font-size: 35px;">
-                  <li class="nav-item">
-                      <a href="{% url 'home' %}" class="nav-link " title="HOME" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
-                          <i class="bi bi-house-door-fill" style="color: orangered;"></i>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="{% url 'add_task' %}" class="nav-link" title="ADD TASK" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
-                          <i class="bi bi-plus-square-fill" style="color: orangered;"></i>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="{% url 'completed_task' %}" class="nav-link" title="COMPLETED TASK" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Orders">
-                          <i class="bi bi-check2-square" style="color: orangered;"></i>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="{% url 'pending_task' %}" class="nav-link" title="PENDING TASK" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Products">
-                          <i class="bi bi-hourglass-bottom" style="color: orangered;"></i>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="#" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Customers">
-                          <i class="bi-people" style="color: orangered;"></i>
-                      </a>
-                  </li>
-                  </ul>
-              </div>
-          </div>
-          <div class="col-sm p-3 min-vh-100">
-              <!-- content -->
-              <div class="container-fluid sticky-top">
-            {% block titlecontent %} {% endblock %}
-          </div>
-  
-          <div class="container-fluid">
-            {% block content %} {% endblock %}
-          </div>
-          </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-auto  sticky-top card shadow-sm" style="background-color: #00838f;">
+        <div class="d-flex flex-sm-column flex-row flex-nowrap  align-items-center sticky-top" style="background-color: #00838f;">
+          <ul
+            class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center mt-3"
+            style="font-size: 20px; ">
+            <li class="nav-item mb-3">
+              <a href="{% url 'home' %}" class="nav-link shadow-sm " title="HOME" data-bs-toggle="tooltip"
+                data-bs-placement="right" data-bs-original-title="Home" style="background-color: #fff; border-style: solid; border-color: black; border-radius: 5px;">
+                <img src="{% static 'img/logo3.png' %}" width="25" height="20" alt="">
+              </a>
+            </li>
+            <li class="nav-item mb-3">
+              <a href="{% url 'home' %}" class="nav-link " title="HOME" data-bs-toggle="tooltip"
+                data-bs-placement="right" data-bs-original-title="Home">
+                <i class="bi bi-house-door-fill" style="color: #fff;"></i>
+              </a>
+            </li>
+            <li class="nav-item mb-3">
+              <a href="{% url 'add_task' %}" class="nav-link" title="ADD TASK" data-bs-toggle="tooltip"
+                data-bs-placement="right" data-bs-original-title="Dashboard">
+                <i class="bi bi-plus-square-fill" style="color: #fff;"></i>
+              </a>
+            </li>
+            <li class="nav-item mb-3">
+              <a href="{% url 'completed_task' %}" class="nav-link" title="COMPLETED TASK" data-bs-toggle="tooltip"
+                data-bs-placement="right" data-bs-original-title="Orders">
+                <i class="bi bi-check2-square" style="color: #fff;"></i>
+              </a>
+            </li>
+            <li class="nav-item mb-3">
+              <a href="{% url 'pending_task' %}" class="nav-link" title="PENDING TASK" data-bs-toggle="tooltip"
+                data-bs-placement="right" data-bs-original-title="Products">
+                <i class="bi bi-hourglass-split" style="color: #fff;"></i>
+              </a>
+            </li>
+            <li class="nav-item mb-3">
+              <a href="#" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right"
+                data-bs-original-title="Customers">
+                <i class="bi-people" style="color: #fff;"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
+      <div class="col-sm  min-vh-100">
+        <!-- content -->
+        <div class="container-fluid">
+          {% block titlecontent %} {% endblock %}
+        </div>
+
+        <div class="container-fluid">
+          {% block content %} {% endblock %}
+        </div>
+      </div>
+    </div>
   </div>
 
 
+  <!--
   <div class="offcanvas bg-dark offcanvas-end" tabindex="-1" id="offcanvasNavbar"
     aria-labelledby="offcanvasNavbarLabel">
     <div class="offcanvas-header">
@@ -111,6 +128,7 @@
       </ul>
     </div>
   </div>
+  -->
 
 
 
@@ -119,7 +137,7 @@
 
     <div class="text-center">
       <a class="img" href="#">
-        <img src="{% static 'img/img.png' %}" width="100px" height="20px" alt="">
+        <img src="{% static 'img/namelogo.png' %}" width="100px" height="25px" alt="">
       </a>
     </div>
     <!-- Copyright -->
