--- a/templates/pending.html
+++ b/templates/pending.html
@@ -6,16 +6,16 @@
 
 {% block titlecontent %} 
 
-<div class="row bg-dark shadow-sm" style="margin-top: 10px; padding: 7px; color: #ff6404;">
-  <h2 style="font-family: Racing Sans One;">All Tasks</h2>
+<div class="row shadow-sm card" style="margin-top: 0px; padding: 7px; color: #00838f;">
+  <h2 style="font-family: Racing Sans One;">Pending Tasks</h2>
 </div> 
 {% endblock %}
 
 {% block content %} 
 
-<div class="row shadow-lg" style="padding-bottom: 30px; margin-bottom: 40px; padding-top: 20px; margin-top: 20px;">
+<div class="row shadow-lg" style=" padding-bottom: 30px; margin-bottom: 40px; padding-top: 20px; margin-top: 20px;">
     <div class="col-12">   
-    <table class=" table table-hover ">
+    <table class=" table table-hover " style="color: #00838f;">
         <thead>
           <tr>
             <th>Date</th>
