--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-auto  sticky-top card shadow-sm" style="background-color: #00838f;">
+      <div class="col-sm-auto  sticky-top  shadow-sm" style="background-color: #00838f;">
         <div class="d-flex flex-sm-column flex-row flex-nowrap  align-items-center sticky-top" style="background-color: #00838f;">
           <ul
             class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center mt-3"
