--- a/templates/completed_task.html
+++ b/templates/completed_task.html
@@ -6,14 +6,14 @@
 
 {% block titlecontent %} 
 
-<div class="row card shadow-sm" style="margin-top: 0px; padding: 7px; color: #00838f;">
+<div class="row  shadow-sm" style="margin-top: 0px; padding: 7px; color: #00838f;">
   <h3 style="font-family: Racing Sans One;">Completed Tasks</h3>
 </div> 
 {% endblock %}
 
 {% block content %} 
 
-<div class="row shadow-sm card" style="padding-bottom: 20px; margin-top: 7px;">
+<div class="row shadow-lg mt-3" style="padding-bottom: 0px; margin-top: 10px;">
     <div class="col-12">   
     <table class="table table-hover">
         <thead>
