--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 
 {% block titlecontent %} 
 
-<div class="row shadow-sm sticky-top card" style="margin-top: 0px; background-color: #00838f; padding: 7px; color: #fff;">
+<div class="row shadow-sm sticky-top " style=" margin-top: 0px; background-color: #00838f; padding: 7px; color: #fff;">
   <h3 style="font-family: Racing Sans One;">All Tasks</h3>
 </div> 
 {% endblock %}
