color changed with logo

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,8 @@
 
 {% block titlecontent %} 
 
-<div class="row shadow-sm sticky-top " style=" margin-top: 0px; background-color: #00838f; padding: 7px; color: #fff;">
-  <h3 style="font-family: Racing Sans One;">All Tasks</h3>
+<div class="row shadow-sm" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
+  <h2 style="font-family: Racing Sans One;">All Tasks</h2>
 </div> 
 {% endblock %}
 
