--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -48,7 +48,7 @@
             </div>
 
             <div class="row mt-3">
-                <div class="col-lg-8">
+                <div class="col-lg-4">
                     <label for="type" class="form-label" style="color: #00838f;">Type</label>
                     <select name="type" id="type" class="form-select">
                         <option value="01">deploy</option>
@@ -61,6 +61,14 @@
                     <input type="number" class="form-control" id="time" name="time">
                 </div>
 
+                <div class="col-lg-4">
+                    <label for="user" class="form-label" style="color: #00838f;">User Name</label>
+                    <select name="user" id="user" class="form-select">
+                        {% for user in users %}
+                        <option value="{{user.id}}">{{ user.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
 
             </div>
             <div class="row mt-3">
