--- a/templates/base.html
+++ b/templates/base.html
@@ -39,45 +39,51 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-auto  sticky-top  shadow-sm" style="background-color: #00838f;">
+      <div class="col-sm-auto  sticky-top" style="background-color: #00838f;">
         <div class="d-flex flex-sm-column flex-row flex-nowrap  align-items-center sticky-top" style="background-color: #00838f;">
           <ul
-            class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center mt-3"
-            style="font-size: 20px; ">
+            class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center mt-2"
+            style="font-size: 15px; ">
             <li class="nav-item mb-3">
-              <a href="{% url 'home' %}" class="nav-link shadow-sm " title="HOME" data-bs-toggle="tooltip"
-                data-bs-placement="right" data-bs-original-title="Home" style="background-color: #fff; border-style: solid; border-color: black; border-radius: 5px;">
-                <img src="{% static 'img/logo3.png' %}" width="25" height="20" alt="">
+              <a href="{% url 'home' %}" class="nav-link" title="HOME" data-bs-toggle="tooltip"
+                data-bs-placement="right" data-bs-original-title="Home">
+                <img src="{% static 'img/logow.png' %}" width="30" height="23" alt="">
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="{% url 'home' %}" class="nav-link " title="HOME" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Home">
-                <i class="bi bi-house-door-fill" style="color: #fff;"></i>
+                <i class="bi bi-house-door-fill fs-4" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="{% url 'add_task' %}" class="nav-link" title="ADD TASK" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Dashboard">
-                <i class="bi bi-plus-square-fill" style="color: #fff;"></i>
+                <i class="bi bi-plus-square-fill fs-4" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="{% url 'completed_task' %}" class="nav-link" title="COMPLETED TASK" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Orders">
-                <i class="bi bi-check2-square" style="color: #fff;"></i>
+                <i class="bi bi-check2-square fs-4" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="{% url 'pending_task' %}" class="nav-link" title="PENDING TASK" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Products">
-                <i class="bi bi-hourglass-split" style="color: #fff;"></i>
+                <i class="bi bi-hourglass-split fs-4" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
               <a href="#" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right"
                 data-bs-original-title="Customers">
-                <i class="bi-people" style="color: #fff;"></i>
+                <i class="bi-people fs-4" style="color: #fff;"></i>
+              </a>
+            </li>
+            <li class="nav-item mb-3">
+              <a href="#" class="nav-link" title="LOG OUT" data-bs-toggle="tooltip" data-bs-placement="right"
+                data-bs-original-title="Customers">
+                <i class="bi bi-box-arrow-right fs-4" style="color: #fff;"></i>
               </a>
             </li>
           </ul>
@@ -85,7 +91,7 @@
       </div>
       <div class="col-sm  min-vh-100">
         <!-- content -->
-        <div class="container-fluid">
+        <div class="col-12">
           {% block titlecontent %} {% endblock %}
         </div>
 
