--- a/templates/completed_task.html
+++ b/templates/completed_task.html
@@ -24,6 +24,7 @@
             <th>Status</th>
             <th>Type</th>
             <th>Time</th>
+            <th>User</th>
           </tr>
         </thead>
         <tbody>
@@ -35,6 +36,7 @@
             <td>{{ task.status}}</td>
             <td>{{ task.type}}</td>
             <td>{{ task.time}}</td>
+            <td>{{ task.user }}</td>
           </tr>
          
         {% endfor %} 
