--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -4,6 +4,13 @@
 
 {% block title %} <title> Edit task </title> {% endblock %}
 
+{% block titlecontent %} 
+
+<div class="row  shadow-sm" style="margin-top: 0px; padding: 7px; color: #00838f;">
+  <h3 style="font-family: Racing Sans One;">Completed Tasks</h3>
+</div> 
+{% endblock %}
+
 
 {% block content %}
 
