--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -64,9 +64,8 @@
                 <div class="col-lg-4">
                     <label for="user" class="form-label" style="color: #00838f;">User Name</label>
                     <select name="user" id="user" class="form-select">
-                        {% for usr in userl %}
-                          <option value="{{ usr.id }}">{{usr.username}}</option>
-                        {% endfor %}
+                          <option value="{{ userl.id }}">{{userl.username}}</option>
+                    
                     </select>
                 </div>
 
