--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
               </a>
             </li>
             <li class="nav-item mb-3">
-              <a href="#" class="nav-link" title="LOG OUT" data-bs-toggle="tooltip" data-bs-placement="right"
+              <a href="/logout" class="nav-link" title="LOG OUT" data-bs-toggle="tooltip" data-bs-placement="right"
                 data-bs-original-title="Customers">
                 <i class="bi bi-box-arrow-right fs-5" style="color: #fff;"></i>
               </a>
