--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SignUp</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
@@ -65,12 +65,12 @@
                         </div>
                         <div class="cs-form" style="text-align: left;">
                             <label>Password</label>
-                            <input type="password" id="pass1" name="pass1" class="form-control" />
+                            <input type="password" id="pass1" name="pass1" class="form-control" required/>
 
                         </div>
                         <div class="cs-form" style="text-align: left;">
                             <label>Confirm-Password</label>
-                            <input type="password" id="pass2" name="pass2" class="form-control" />
+                            <input type="password" id="pass2" name="pass2" class="form-control" required/>
 
                         </div>
                         <p class="text-muted text-center small">At least 8 characters and 1 digit</p>
@@ -82,7 +82,7 @@
                     </div>
 
                     <p class="text-center m-0">
-                        Already have an account? <a class="text-decoration-none" style="color: #00838f;" href="#">Sign
+                        Already have an account? <a class="text-decoration-none" style="color: #00838f;" href="{% url 'signin' %}">Sign
                             In</a>
                     </p>
                 </div>
