--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -37,13 +37,13 @@
                 </div>
                 <div class="col-lg-4">
                     <label for="date" class="form-label" style="color: #00838f;">Date</label>
-                    <input type="date" name="date" class="form-control">
+                    <input type="date" name="date" class="form-control" required>
                 </div>
             </div>
             <div class="row mt-3">
                 <div class="col-12">
                     <label for="task" class="form-label" style="color: #00838f;">Task</label>
-                    <input type="text-l" class="form-control" id="task" placeholder="Task name" name="task">
+                    <input type="text-l" class="form-control" id="task" placeholder="Task name" name="task" required>
                 </div>
             </div>
 
