--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
 
   <div class="container-fluid">
-    <div class="row">
+    <div class="row content">
       <div class="col-sm-auto  sticky-top" style="background-color: #00838f;">
         <div class="d-flex flex-sm-column flex-row flex-nowrap  align-items-center sticky-top" style="background-color: #00838f;">
           <ul
