--- a/templates/completed_task.html
+++ b/templates/completed_task.html
@@ -13,7 +13,7 @@
 
 {% block content %} 
 
-<div class="row shadow-lg mt-3" style="padding-bottom: 0px; margin-top: 10px;">
+<div class="row shadow-lg mt-3" style="padding-bottom: 0px; margin-top: 10px; overflow-x: scroll;">
     <div class="col-12">   
     <table class="table table-hover">
         <thead>
