--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -4,66 +4,71 @@
 
 {% block title %} <title> Edit task </title> {% endblock %}
 
-{% block titlecontent %} 
+{% block titlecontent %}
 
 <div class="row  shadow-sm" style="margin-top: 0px; padding: 7px; color: #00838f;">
-  <h3 style="font-family: Racing Sans One;">Completed Tasks</h3>
-</div> 
+    <h3 style="font-family: Racing Sans One;">Completed Tasks</h3>
+</div>
 {% endblock %}
 
 
 {% block content %}
 
-<form class="g-3" method="get">
-    {% csrf_token %}
-    <div class="row">
-        <div class="col-12">
-            <label for="task" class="form-label">Task</label>
-            <input type="text" value="{{task.name}}" class="form-control" id="task" placeholder="Task name" name="task_name">
+<div class="row justify-content-center mt-3">
+    <form class="g-3 shadow-lg" method="get" style="background-color: white;  padding-bottom: 20px; padding-top: 20px;">
+        {% csrf_token %}
+        <div class="row">
+            <div class="col-12">
+                <label for="task" class="form-label">Task</label>
+                <input type="text" value="{{task.name}}" class="form-control" id="task" placeholder="Task name"
+                    name="task_name">
+            </div>
         </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col-lg-4">
-            <label for="client" class="form-label">Client Name</label>
-            <input type="text" value="{{task.client.name}}" class="form-control" id="client" placeholder=" name" name="client">
-        </div>
-        <div class="col-lg-4">
-            <label for="date" class="form-label">Date</label>
-            <input type="text" value="{{task.date}}" name="date" class="form-control">
-        </div>
-        <div class="col-lg-4">
-            <label for="status" class="form-label">Status</label>
-            <select name="status" id="status" class="form-select">
-                <option value="0">Pending</option>
-                <option value="1">Completed</option>
+        <div class="row mt-3">
+            <div class="col-lg-4">
+                <label for="client" class="form-label">Client Name</label>
+                <input type="text" value="{{task.client.name}}" class="form-control" id="client" placeholder=" name"
+                    name="client">
+            </div>
+            <div class="col-lg-4">
+                <label for="date" class="form-label">Date</label>
+                <input type="text" value="{{task.date}}" name="date" class="form-control">
+            </div>
+            <div class="col-lg-4">
+                <label for="status" class="form-label">Status</label>
+                <select name="status" id="status" class="form-select">
+                    <option value="0">Pending</option>
+                    <option value="1">Completed</option>
 
-            </select>
+                </select>
+            </div>
         </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col-lg-4">
-            <label for="type" class="form-label">Type</label>
-            <select name="type" id="type" class="form-select">
-                <option value="01">01</option>
-                <option value="02">02</option>
+        <div class="row mt-3">
+            <div class="col-lg-4">
+                <label for="type" class="form-label">Type</label>
+                <select name="type" id="type" class="form-select">
+                    <option value="01">01</option>
+                    <option value="02">02</option>
 
-            </select>
-        </div>
-        <div class="col-lg-4">
-            <label for="time" class="form-label">Time</label>
-            <input type="number" value="{{task.time}}" class="form-control" id="time" name="time">
-        </div>
-        
-    </div>
-    <div class="row mt-3">
-        <div class="col-lg-10"></div>
-        <div class="col-lg-2">
-            <button type="submit" class="btn btn-md btn-primary w-100">Add</button>
-           
-        </div>
-    </div>
+                </select>
+            </div>
+            <div class="col-lg-4">
+                <label for="time" class="form-label">Time</label>
+                <input type="number" value="{{task.time}}" class="form-control" id="time" name="time">
+            </div>
 
+        </div>
+        <div class="row mt-3">
+            <div class="col-lg-10"></div>
+            <div class="col-lg-2">
+                <button type="submit" class="btn btn-lg btn-floating w-100 shadow-sm"
+                    style="background-color: #00838f; border: none; color: #fff; font-family: DM Sans;">
+                    <i class="bi bi bi-plus-square" style="color: #fff;"></i> Add</button>
 
+            </div>
+        </div>
+
+</div>
 
 </form>
 
