--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block title %} <title> Home </title> {% endblock %}
 
 
-{% block titlecontent %} 
+{% block titlecontent %}
 <!--
 <div class="row shadow-sm" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
   <h2 style="font-family: Racing Sans One;">All Tasks</h2>
@@ -13,59 +13,60 @@
 -->
 {% endblock %}
 
-{% block content %} 
+{% block content %}
 
 
-<div class="row justify-content-center" >
+<div class="row justify-content-center">
   <div class="col-sm-5 shadow-sm m-2 card" style="overflow-x: scroll;"></div>
-  <div class="col-sm-6 shadow-sm m-2 card" style="overflow-x: scroll;">   
+  <div class="col-sm-6 shadow-sm m-2 card" style="overflow-x: scroll;">
     <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Date</th>
-            <th>Task</th>
-            <th>Client</th>
-            <th>Status</th>
-            <th>Type</th>
-            <th>Time</th>
-            <th>action</th>
-            <th>User</th>
-          </tr>
-        </thead>
-        <tbody>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Task</th>
+          <th>Client</th>
+          <th>Status</th>
+          <th>Type</th>
+          <th>Time</th>
+          <th>action</th>
+          <th>User</th>
+        </tr>
+      </thead>
+      <tbody>
         {% for task in all_tasks %}
-          <tr>
-            <td>{{ task.date }}</td>
-            <td>{{ task.name }}</td>
-            <td>{{ task.client.name}}</td>
-            <td>
-              {% if task.status == "0" %}
-            
-                <a type="text">pending</a>
-              {% elif task.status == "1" %}
-                <a type="text">completed</a>
-              {% endif %}
-            </td>
-            <td>{{ task.type}}</td>
-            <td>{{ task.time}}</td>
-            <td>{{ task.user }}</td>
-            <td>
+        <tr>
+          <td>{{ task.date }}</td>
+          <td>{{ task.name }}</td>
+          <td>{{ task.client.name}}</td>
+          <td>
             {% if task.status == "0" %}
-          
-              <a href="{% url 'edit_task'  task_id=task.id %}" type="button" class="btn btn-light" style="color: #00838f;">edit</a>
+
+            <a type="text">pending</a>
             {% elif task.status == "1" %}
-              <a type="text">no edit</a>
+            <a type="text">completed</a>
             {% endif %}
-            </td>
-          </tr>
-         
-        {% endfor %} 
-        </tbody>
-      </table>
-    </div>
+          </td>
+          <td>{{ task.type}}</td>
+          <td>{{ task.time}}</td>
+          <td>{{ task.user }}</td>
+          <td>
+            {% if task.status == "0" %}
+
+            <a href="{% url 'edit_task'  task_id=task.id %}" type="button" class="btn btn-light"
+              style="color: #00838f;">edit</a>
+            {% elif task.status == "1" %}
+            <a type="text">no edit</a>
+            {% endif %}
+          </td>
+        </tr>
+
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 
 </div>
-<div class="row justify-content-center" >
+<div class="row justify-content-center">
   <div class="col-sm-5 shadow-sm m-2 card" style="overflow-x: scroll;">
     <table class="table table-hover">
       <thead>
@@ -81,81 +82,50 @@
         </tr>
       </thead>
       <tbody>
-      {% for tas in taskfl %}
+        {% for tas in taskfl %}
         <tr>
           <td>{{ tas.date }}</td>
           <td>{{ tas.name }}</td>
           <td>{{ tas.client.name}}</td>
           <td>
             {% if tas.status == "0" %}
-          
-              <a type="text">pending</a>
+
+            <a type="text">pending</a>
             {% elif tas.status == "1" %}
-              <a type="text">completed</a>
+            <a type="text">completed</a>
             {% endif %}
           </td>
           <td>{{ tas.type}}</td>
           <td>{{ tas.time}}</td>
           <td>{{ tas.user }}</td>
           <td>
-          {% if tas.status == "0" %}
-        
-            <a href="{% url 'edit_task'  task_id=tas.id %}" type="button" class="btn btn-light" style="color: #00838f;">edit</a>
-          {% elif tas.status == "1" %}
+            {% if tas.status == "0" %}
+
+            <a href="{% url 'edit_task'  task_id=tas.id %}" type="button" class="btn btn-light"
+              style="color: #00838f;">edit</a>
+            {% elif tas.status == "1" %}
             <a type="text">no edit</a>
-          {% endif %}
+            {% endif %}
           </td>
         </tr>
-       
-      {% endfor %} 
+
+        {% endfor %}
       </tbody>
-    </table> 
+    </table>
   </div>
-  <div class="col-sm-6 shadow-sm m-2 card" style="overflow-x: scroll;">   
-    <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Date</th>
-            <th>Task</th>
-            <th>Client</th>
-            <th>Status</th>
-            <th>Type</th>
-            <th>Time</th>
-            <th>action</th>
-            <th>User</th>
-          </tr>
-        </thead>
-        <tbody>
-        {% for tas in taskfl %}
-          <tr>
-            <td>{{ tas.date }}</td>
-            <td>{{ tas.name }}</td>
-            <td>{{ tas.client.name}}</td>
-            <td>
-              {% if tas.status == "0" %}
-            
-                <a type="text">pending</a>
-              {% elif tas.status == "1" %}
-                <a type="text">completed</a>
-              {% endif %}
-            </td>
-            <td>{{ tas.type}}</td>
-            <td>{{ tas.time}}</td>
-            <td>{{ tas.user }}</td>
-            <td>
-            {% if tas.status == "0" %}
-          
-              <a href="{% url 'edit_task'  task_id=tas.id %}" type="button" class="btn btn-light" style="color: #00838f;">edit</a>
-            {% elif tas.status == "1" %}
-              <a type="text">no edit</a>
-            {% endif %}
-            </td>
-          </tr>
-         
-        {% endfor %} 
-        </tbody>
-      </table>
-    </div>
+  <div class="col-sm-6 shadow-sm m-2 card" style="overflow-x: scroll;">
+    <form method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <input type="file" name="myfile">
+      <input type="text" name="client" id="">
+      <button type="submit">Upload</button>
+    </form>
+    
+    {% if uploaded_file_url %}
+    <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
+    {% endif %}
+
+  </div>
 
 </div>
 
