--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,73 +24,78 @@
 
 
 <body>
-    <div class="container justify-content-center p-5" style="box-sizing: border-box;">
+    <div class="container-fluid">
+        <div class="row justify-content-center" style="box-sizing: border-box;">
+            <div class="col-sm-7 " style="margin-top: 100px;">
 
-        <form class="cs-form card shadow-lg m-5" method="post">
-            {% csrf_token %}
+                <form class="cs-form card shadow-lg" method="post">
+                    {% csrf_token %}
 
-            <div class="text-center text-white" style="background: #00838f; padding-top: 13px;">
-                <p style="font-family: Racing Sans One; font-size: 25px;">SIGN UP</p>
-            </div>
-            <div class="mx-4 mt-4 p-3">
-                <div class="row mb-n4">
-                    <div class="col">
-                        <div class="text-center text-white" style="padding-top: 130px;">
-                            <img src="{% static 'img/logof.png' %}" width="300" height="90" alt="">
+                    <div class="text-center text-white" style="background: #00838f; padding-top: 13px;">
+                        <p style="font-family: Racing Sans One; font-size: 25px;">SIGN UP</p>
+                    </div>
+                    <div class="mt-3 p-4">
+                        <div class="row mb-n4">
+                            <div class="col">
+                                <div class="text-center text-white" style="padding-top: 130px;">
+                                    <img src="{% static 'img/logof.png' %}" width="300" height="90" alt="">
+                                </div>
+
+                            </div>
+                            <div class="col" style="text-align: right;">
+                                <div class="cs-form" style="text-align: left;">
+                                    <label>First Name</label>
+                                    <input type="text" id="fname" name="fname" class="form-control" />
+
+                                </div>
+
+                                <div class="cs-form" style="text-align: left;">
+                                    <label>Last Name</label>
+                                    <input type="text" id="lname" name="lname" class="form-control" />
+
+                                </div>
+                                <div class="cs-form" style="text-align: left;">
+                                    <label>User Name</label>
+                                    <input type="text" id="username" name="username" class="form-control" />
+
+                                </div>
+
+                                <div class="cs-form" style="text-align: left;">
+                                    <label>E-mail</label>
+                                    <input type="email" id="email" name="email" class="form-control" />
+
+                                </div>
+                                <div class="cs-form" style="text-align: left;">
+                                    <label>Password</label>
+                                    <input type="password" id="pass1" name="pass1" class="form-control" required />
+
+                                </div>
+                                <div class="cs-form" style="text-align: left;">
+                                    <label>Confirm-Password</label>
+                                    <input type="password" id="pass2" name="pass2" class="form-control" required />
+
+                                </div>
+                                <p class="text-muted text-center small">At least 8 characters and 1 digit</p>
+                                <button type="submit" class="btn btn-info btn-lg btn-block "
+                                    style="background-color: #00838f; color: #fff;">
+                                    Sign up
+                                </button>
+
+                            </div>
+
+                            <p class="text-center mt-2">
+                                Already have an account? <a class="text-decoration-none" style="color: #00838f;"
+                                    href="{% url 'signin' %}">Sign
+                                    In</a>
+                            </p>
                         </div>
+
 
                     </div>
-                    <div class="col" style="text-align: right;">
-                        <div class="cs-form" style="text-align: left;">
-                            <label>First Name</label>
-                            <input type="text" id="fname" name="fname" class="form-control" />
 
-                        </div>
-
-                        <div class="cs-form" style="text-align: left;">
-                            <label>Last Name</label>
-                            <input type="text" id="lname" name="lname" class="form-control" />
-
-                        </div>
-                        <div class="cs-form" style="text-align: left;">
-                            <label>User Name</label>
-                            <input type="text" id="username" name="username" class="form-control" />
-
-                        </div>
-
-                        <div class="cs-form" style="text-align: left;">
-                            <label>E-mail</label>
-                            <input type="email" id="email" name="email" class="form-control" />
-
-                        </div>
-                        <div class="cs-form" style="text-align: left;">
-                            <label>Password</label>
-                            <input type="password" id="pass1" name="pass1" class="form-control" required/>
-
-                        </div>
-                        <div class="cs-form" style="text-align: left;">
-                            <label>Confirm-Password</label>
-                            <input type="password" id="pass2" name="pass2" class="form-control" required/>
-
-                        </div>
-                        <p class="text-muted text-center small">At least 8 characters and 1 digit</p>
-                        <button type="submit" class="btn btn-info btn-lg btn-block "
-                            style="background-color: #00838f; color: #fff;">
-                            Sign up
-                        </button>
-
-                    </div>
-
-                    <p class="text-center m-0">
-                        Already have an account? <a class="text-decoration-none" style="color: #00838f;" href="{% url 'signin' %}">Sign
-                            In</a>
-                    </p>
-                </div>
-
-
+                </form>
             </div>
-
-        </form>
+        </div>
     </div>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
